# backtrac

./: .gitignore  README.md  pyproject.toml
_old/: analyze_production.py
backtrac/: __init__.py  classify.py  config.py  data.py  integrator.py  particles.py  viz.py
configs/: sp13_075.yaml
papers/: 10.1002_2015ja021080.md  10.1002_2016ja023304.md  10.1002_2017ja023877.md  10.1002_2017ja023926.md  10.1002_2017ja024268.md  10.1002_jgra.50452.md  10.1029_2018ja025370.md  10.1063_1.1704641.md
pilot/: make_class_videos.pbs  make_class_videos.py  make_comparison_video.py  make_rcmbound_video.pbs  make_rcmbound_video.py  make_video_mt.py  plot_comeback.py  plot_comeback2.py  run_pilot.pbs  run_sina_1k.py  run_sina_adaptive.py  run_sina_hybrid.py  sp13_backtrace.xml
scripts/: analyze.py  convert_mage.py  make_video.py  run_backtrace.py
slides/: backtrac_pilot.tex
